--- a/css/quarto.css
+++ b/css/quarto.css
@@ -1,30 +1,77 @@
-#main_title {
-        
+#main_title {  
     text-align: center;
-}
-
-.left_panel {
-width: 25%;
-float: left;
-
-}
-
-.middle_panel {
-width: 50%;
-float: left;
-margin-left: 2%;
-margin-right: 2%;
-}
-
-.right_panel {
-width:21%;
-float: right;
 }
 
 #quarto_table td {
   width: 10em; 
   height:10em;
   text-align:center;
-  background-color: rgb(238, 237, 237);
+  background-color:  rgb(238, 237, 237);
+
 }
 
+#playing_mode {
+  display: inline-block;
+  border-radius: 5px;
+  border: 2px solid #000000;
+}
+
+#title_banner,
+#quarto_board,
+#game_login_input,
+#player_info,
+#piece_selector_input,
+#piece_coordinates_input ,
+#waiting ,
+#start_reset_game,
+#main_page {
+  display: inline-block;
+}
+
+#winner{
+  font-family: Belgrano, serif;
+  font-size: 90px;
+  font-weight: 600;
+  color: #2da631;
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+}
+
+#loser{
+  font-family: Belgrano, serif;
+  font-size: 90px;
+  font-weight: 600;
+  color: rgba(237, 71, 71, 1);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+}
+
+#draw{
+  font-family: Belgrano, serif;
+  font-size: 90px;
+  font-weight: 600;
+  color: rgba(85, 77, 240, 1);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+}
+
+#aborted{
+  font-family: Belgrano, serif;
+  font-size: 90px;
+  font-weight: 600;
+  color: rgb(99, 15, 209);
+  text-transform: uppercase;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 2em;
+  letter-spacing: 0px;
+}
